# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  cli_even.py
brain_games/core/: core.py
brain_games/games/: calc.py  gcd.py  is_even.py  is_prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  utils.py
brain_games/utils/: gcd.py  math.py  progression.py  randomizer.py
