[project]
author = "Скляров Александр"
name = "hexlet-code"
version = "0.1.0"
description = "Набор из 4 консольных игр"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[project.scripts]
brain-calc = "brain_games.scripts.brain_calc:main"
brain-games = "brain_games.scripts.brain_games:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-progression = "brain_games.scripts.brain_progression:main"
